[package]
name = "kiwi"
version = "0.1.0"
authors = ["Alex Carter <acarter010204@gmail.com>"]
description = "A KIcad Web Interface"
license = "MIT/Apache-2.0"
repository = "https://github.com/iommu/kiwi"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
symbolic_expressions = "5.0.3"
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
]
